tests/ui/borrowck/borrowck-match-multiple-uninitialized.stderr
error[E0381]: used binding `message` isn't initialized on any path leading to this point
  --> $DIR/borrowck-match-multiple-uninitialized.rs:17:24
   |
LL |     let message: &str; // Declared but not initialized
   |         ------- binding declared here but left uninitialized
...
LL |         Status::Pending => {
   |         --------------- if this pattern is matched, `message` is not initialized
LL |             println!("{message}");
   |                        ^^^^^^^ `message` used here but it isn't initialized on any path leading to this point
   |
help: consider assigning a value
   |
LL |     let message: &str = ""; // Declared but not initialized
   |                       ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
